Trying to fix input date on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,13 +3,16 @@
 @tailwind utilities;
 
 @layer base {
-  input[type="number"]::-webkit-inner-spin-button,
-  input[type="number"]::-webkit-outer-spin-button {
+  input[type='number']::-webkit-inner-spin-button,
+  input[type='number']::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
   }
   ::-webkit-calendar-picker-indicator {
     filter: invert(1);
+  }
+  input[type='date'] {
+    appearance: none;
   }
 }
 
